--- a/obl/src/estilos.css
+++ b/obl/src/estilos.css
@@ -1,13 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-  }
-
-/* .active{
-  background-color: #0084ff;
-  color: #000000;
-  border-radius: 5px;
-} */
+.nav{
+  background-color: #FFC8DD;
+}
